<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Work Times Manager</string>

    <string name="work_times">Work Times</string>
    <string name="settings">Settings</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="break_time">Break Time</string>
    <string name="total_time">Total Time</string>
    <string name="comment">Comment</string>

    <string name="deleted">Deleted</string>

    <string name="work_time_added">Work Time added</string>
    <string name="work_time_deleted">Work Time deleted</string>
    <string name="work_time_edited">Work Time edited</string>

    <string name="backup_created">Backup created</string>
    <string name="backup_restored">Backup restored</string>
    <string name="exported">Database exported</string>
    <string name="imported">Database imported</string>

    <string name="delete_title">Delete?</string>
    <string name="are_you_sure">Are you sure you want to remove %1$s from the list?</string>

    <string name="general">General</string>
    <string name="night_mode">Night Mode</string>

    <string name="default_Values">Default Values</string>

    <string name="backup_restore">Backup and Restore</string>
    <string name="backup_directory">Backup Directory</string>
    <string name="backup">Backup</string>
    <string name="backup_summary">Backup Database</string>
    <string name="restore">Restore</string>
    <string name="restore_summary">Restore Database</string>

    <string name="export_import">Export and Import</string>
    <string name="export_directory">Export Directory</string>
    <string name="export">Export</string>
    <string name="export_summary">Export all Work Times to csv</string>
    <string name="import_">Import</string>
    <string name="import_summary">Import all Work Times from csv</string>

    <string name="other">Other</string>
    <string name="version">Version</string>
</resources>