<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general">
        <SwitchPreference
                app:key="night_mode"
                app:title="@string/night_mode"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/default_Values">
        <Preference
                app:key="start_time"
                app:title="@string/start_time"/>

        <Preference
                app:key="break_time"
                app:title="@string/break_time"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/backup_restore">
        <Preference
                app:key="backup_directory"
                app:title="@string/backup_directory"
                app:summary="Downloads"/>
        <Preference
                app:key="backup"
                app:title="@string/backup"
                app:summary="@string/backup_summary"/>
        <Preference
                app:key="restore"
                app:title="@string/restore"
                app:summary="@string/restore_summary"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/export_import">
        <Preference
                app:key="export_directory"
                app:title="@string/export_directory"
                app:summary="Downloads"/>
        <Preference
                app:key="export"
                app:title="@string/export"
                app:summary="@string/export_summary"/>
        <Preference
                app:key="import"
                app:title="@string/import_"
                app:summary="@string/import_summary"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other">
        <Preference
                app:key="version"
                app:title="@string/version"
                app:summary="Alpha 0.1"/>
    </PreferenceCategory>
</PreferenceScreen>