<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/listDataFragment">

    <fragment
            android:id="@+id/listDataFragment"
            android:name="com.zechadrian.worktimemanager.fragments.ListDataFragment"
            android:label="@string/app_name"
            tools:layout="@layout/fragment_list_data">
        <action
                android:id="@+id/action_addData"
                app:destination="@id/addDataFragment"/>
        <action
                android:id="@+id/action_viewData"
                app:destination="@id/viewDataFragment"/>
        <argument
                android:name="message"
                app:argType="string"
                app:nullable="true"
                />
    </fragment>
    <fragment
            android:id="@+id/addDataFragment"
            android:name="com.zechadrian.worktimemanager.fragments.AddDataFragment"
            android:label="@string/add"
            tools:layout="@layout/fragment_add_data">
        <action
                android:id="@+id/action_listData"
                app:popUpTo="@+id/listDataFragment"
                app:popUpToInclusive="true"
                app:destination="@+id/listDataFragment"/>
    </fragment>
    <fragment
            android:id="@+id/viewDataFragment"
            android:name="com.zechadrian.worktimemanager.fragments.ViewDataFragment"
            android:label="@string/view"
            tools:layout="@layout/fragment_view_data">
        <action
                android:id="@+id/action_listData"
                app:destination="@id/listDataFragment"
                app:popUpTo="@+id/listDataFragment"
                app:popUpToInclusive="true"/>
        <action
                android:id="@+id/action_editData"
                app:destination="@id/editDataFragment"/>
        <argument
                android:name="id"
                app:argType="long"/>
        <argument
                android:name="date"
                app:argType="string"/>
        <argument
                android:name="startTime"
                app:argType="string"/>
        <argument
                android:name="endTime"
                app:argType="string"/>
        <argument
                android:name="breakTime"
                app:argType="string"/>
        <argument
                android:name="totalTime"
                app:argType="string"/>
        <argument
                android:name="comment"
                app:argType="string"/>
    </fragment>
    <fragment
            android:id="@+id/editDataFragment"
            android:name="com.zechadrian.worktimemanager.fragments.EditDataFragment"
            android:label="@string/edit"
            tools:layout="@layout/fragment_edit_data">
        <action
                android:id="@+id/action_listData"
                app:destination="@id/listDataFragment"
                app:popUpTo="@+id/listDataFragment"
                app:popUpToInclusive="true"/>
        <argument
                android:name="id"
                app:argType="long"/>
        <argument
                android:name="date"
                app:argType="string"/>
        <argument
                android:name="startTime"
                app:argType="string"/>
        <argument
                android:name="endTime"
                app:argType="string"/>
        <argument
                android:name="breakTime"
                app:argType="string"/>
        <argument
                android:name="totalTime"
                app:argType="string"/>
        <argument
                android:name="comment"
                app:argType="string"/>
    </fragment>
    <fragment
            android:id="@+id/settingsFragment"
            android:name="com.zechadrian.worktimemanager.fragments.SettingsFragment"
            android:label="@string/settings"
            tools:layout="@layout/fragment_settings"/>
    <action
            android:id="@+id/action_global_settings"
            app:destination="@id/settingsFragment"
            app:popUpToInclusive="false"/>
</navigation>